[project]
name = "libchronicle"
version = "0.1.0"
description = ""
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools.packages.find]
where = ["bindings/python"]
include = ["libchronicle.py"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
